# fastapi_bootstrap

./: ADVANCED.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.ko.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  tests.yml
.sisyphus/drafts/: usability-improvement.md
examples/: README.md
examples/auth/: README.md  app.py
examples/builder/: README.md  app.py
examples/cors/: README.md  app.py
examples/external_auth/: README.md  app.py
examples/simple/: README.md  app.py
src/fastapi_bootstrap/: __init__.py  auth.py  base.py  builder.py  config.py  logging_api_route.py  metrics.py  response.py
src/fastapi_bootstrap/exception/: definition.py  handler.py
src/fastapi_bootstrap/log/: __init__.py  setup.py
src/fastapi_bootstrap/middleware/: __init__.py
src/fastapi_kit/: __init__.py  auth.py  base.py  logging_api_route.py  response.py
src/fastapi_kit/exception/: definition.py  error_info.py  handler.py
src/fastapi_kit/type/: base_model.py
src/fastapi_kit/util/: etc.py
src/fastapikit/: auth.py  base.py  logging_api_route.py  response.py
src/fastapikit/exception/: type.py
src/fastapikit/log/: loguru_helper.py
tests/: test_app.py  test_auth.py  test_base_model.py  test_builder.py  test_config.py  test_cors.py  test_exception.py  test_logging.py  test_metrics.py  test_middleware.py  test_response.py  test_shutdown.py  test_utils.py
