[build-system]
requires = ["setuptools>=65.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name: fastapi-bootstrap (PyPI convention with hyphen)
# Python import name: fastapi_bootstrap (underscore)
# pip install fastapi-bootstrap
name = "fastapi-bootstrap"
version = "0.0.dev"  # Auto-updated by GitHub Actions when tag is pushed
description = "🚀 Easy FastAPI Setup Kit - Production-ready FastAPI boilerplate with logging, error handling, metrics, security headers, and more"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "JunSeok Kim", email = "infend@gmail.com"}
]
keywords = ["fastapi", "logging", "error-handling", "api", "web", "framework", "production", "metrics", "security", "opentelemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
    "opentelemetry-api>=1.22.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
auth = [
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
]
all = [
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/bestend/fastapi_bootstrap"
Documentation = "https://github.com/bestend/fastapi_bootstrap#readme"
Repository = "https://github.com/bestend/fastapi_bootstrap.git"
Issues = "https://github.com/bestend/fastapi_bootstrap/issues"

[tool.setuptools]
packages = ["fastapi_bootstrap"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
fastapi_bootstrap = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "N818", "N806", "N814",
    "E501",
    "B904", "B007",
    "SIM117",
]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=fastapi_bootstrap --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "python-jose[cryptography]>=3.3.0",
]
